# terraform-cloud-run

./: .gcloudignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.yaml  dev-requirements.txt  pyproject.toml  requirements.txt
api/: config.py  main.py
infra/: alerts.tf  apis.tf  artifact_registry.tf  main.tf  run.tf  service_accounts.tf  variables.tf
tests/: test_api.py
